Shifted some elements around to fix quirks introduced by switching tagTree to flexbox.

--- a/client/styles/_tagTree.scss
+++ b/client/styles/_tagTree.scss
@@ -50,6 +50,9 @@ $tag-bg-dangerous: #FFDCE7;
   }
 
 	> ul {
+		margin-top: 12px;
+		margin-bottom: 12px;
+
 		> li {
 			position: relative;
 
